--- a/src/main/resources/project-info-reports.properties
+++ b/src/main/resources/project-info-reports.properties
@@ -127,8 +127,8 @@ report.dependency-convergence.stats.conflicting                    = Number of v
 report.dependency-convergence.stats.snapshots                      = Number of SNAPSHOT artifacts (NOS):
 report.dependency-convergence.stats.modules                        = Number of modules:
 report.dependency-convergence.title                                = Dependency Convergence
-report.dependency-info.name                                        = Dependency Information
-report.dependency-info.title                                       = Dependency Information
+report.dependency-info.name                                        = Maven Coordinates
+report.dependency-info.title                                       = Maven Coordinates
 report.dependency-info.description                                 = This document describes how to include this project as a dependency using various dependency management tools.
 report.index.nodescription                                         = There is currently no description associated with this project.
 report.index.title                                                 = About
