--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@ under the License.
   </parent>
 
   <artifactId>maven-project-info-reports-plugin</artifactId>
-  <version>3.6.3-SNAPSHOT</version>
+  <version>3.7.0</version>
   <packaging>maven-plugin</packaging>
 
   <name>Apache Maven Project Info Reports Plugin</name>
@@ -95,7 +95,7 @@ under the License.
   <scm>
     <connection>scm:git:https://gitbox.apache.org/repos/asf/maven-project-info-reports-plugin.git</connection>
     <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/maven-project-info-reports-plugin.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>maven-project-info-reports-plugin-3.7.0</tag>
     <url>https://github.com/apache/maven-project-info-reports-plugin/tree/${project.scm.tag}</url>
   </scm>
   <issueManagement>
@@ -123,7 +123,7 @@ under the License.
     <sitePluginVersion>3.20.0</sitePluginVersion>
     <fluidoSkinVersion>2.0.0-M10</fluidoSkinVersion>
     <checkstyle.violation.ignore>ParameterNumber,MethodLength</checkstyle.violation.ignore>
-    <project.build.outputTimestamp>2024-07-11T18:06:39Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2024-08-18T18:43:42Z</project.build.outputTimestamp>
   </properties>
 
   <dependencies>
