[MPIR-469] Broken link to Git documentation page
This closes #77

--- a/src/main/resources/project-info-reports.properties
+++ b/src/main/resources/project-info-reports.properties
@@ -193,7 +193,7 @@ report.scm.general.intro                                           = This projec
 report.scm.name                                                    = Source Code Management
 report.scm.noscm                                                   = No source configuration management system is defined. Please check back at a later date.
 report.scm.overview.title                                          = Overview
-report.scm.git.intro                                               = This project uses {Git, https://git-scm.com/} to manage its source code. Instructions on Git use can be found at {https://git-scm.com/documentation,https://git-scm.com/documentation}.
+report.scm.git.intro                                               = This project uses {Git, https://git-scm.com/} to manage its source code. Instructions on Git use can be found at {https://git-scm.com/doc,https://git-scm.com/doc}.
 report.scm.hg.intro                                                = This project uses {Mercurial, https://www.mercurial-scm.org/} to manage its source code. Instructions on Mercurial use can be found at {http://hgbook.red-bean.com/read/, http://hgbook.red-bean.com/read/}.
 report.scm.svn.intro                                               = This project uses {Subversion, http://subversion.apache.org/} to manage its source code. Instructions on Subversion use can be found at {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}.
 report.scm.title                                                   = Source Code Management
