--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@ under the License.
   </contributors>
 
   <prerequisites>
-    <maven>${mavenVersion}</maven>
+    <maven>3.6.3</maven>
   </prerequisites>
 
   <scm>
@@ -115,7 +115,7 @@ under the License.
 
   <properties>
     <javaVersion>8</javaVersion>
-    <mavenVersion>3.6.3</mavenVersion>
+    <mavenVersion>3.9.11</mavenVersion>
     <resolverVersion>1.4.1</resolverVersion>
     <doxiaVersion>2.0.0</doxiaVersion>
     <doxiaSitetoolsVersion>2.0.0</doxiaSitetoolsVersion>
