--- a/pom.xml
+++ b/pom.xml
@@ -117,11 +117,11 @@ under the License.
     <javaVersion>8</javaVersion>
     <mavenVersion>3.6.3</mavenVersion>
     <resolverVersion>1.4.1</resolverVersion>
-    <doxiaVersion>2.0.0-M12</doxiaVersion>
-    <doxiaSitetoolsVersion>2.0.0-M19</doxiaSitetoolsVersion>
+    <doxiaVersion>2.0.0</doxiaVersion>
+    <doxiaSitetoolsVersion>2.0.0</doxiaSitetoolsVersion>
     <scmVersion>2.1.0</scmVersion>
     <sitePluginVersion>3.20.0</sitePluginVersion>
-    <fluidoSkinVersion>2.0.0-M10</fluidoSkinVersion>
+    <fluidoSkinVersion>2.0.0-M11</fluidoSkinVersion>
     <checkstyle.violation.ignore>ParameterNumber,MethodLength</checkstyle.violation.ignore>
     <project.build.outputTimestamp>2024-08-18T18:44:26Z</project.build.outputTimestamp>
   </properties>
@@ -130,12 +130,12 @@ under the License.
     <dependency>
       <groupId>org.apache.maven.reporting</groupId>
       <artifactId>maven-reporting-api</artifactId>
-      <version>4.0.0-M12</version>
+      <version>4.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.reporting</groupId>
       <artifactId>maven-reporting-impl</artifactId>
-      <version>4.0.0-M15</version>
+      <version>4.0.0</version>
     </dependency>
 
     <!-- Maven -->
