--- a/pom.xml
+++ b/pom.xml
@@ -120,8 +120,8 @@ under the License.
     <doxiaVersion>2.0.0</doxiaVersion>
     <doxiaSitetoolsVersion>2.0.0</doxiaSitetoolsVersion>
     <scmVersion>2.1.0</scmVersion>
-    <sitePluginVersion>3.20.0</sitePluginVersion>
-    <fluidoSkinVersion>2.0.0-M11</fluidoSkinVersion>
+    <sitePluginVersion>3.21.0</sitePluginVersion>
+    <fluidoSkinVersion>2.0.1</fluidoSkinVersion>
     <checkstyle.violation.ignore>ParameterNumber,MethodLength</checkstyle.violation.ignore>
     <project.build.outputTimestamp>2024-10-18T09:42:43Z</project.build.outputTimestamp>
   </properties>
