Enable GitHub Issues

--- a/pom.xml
+++ b/pom.xml
@@ -99,8 +99,8 @@ under the License.
     <url>https://github.com/apache/maven-project-info-reports-plugin/tree/${project.scm.tag}</url>
   </scm>
   <issueManagement>
-    <system>JIRA</system>
-    <url>https://issues.apache.org/jira/browse/MPIR</url>
+    <system>GitHub</system>
+    <url>https://github.com/apache/maven-project-info-reports-plugin/isuess</url>
   </issueManagement>
   <ciManagement>
     <system>Jenkins</system>
@@ -453,32 +453,6 @@ under the License.
   </reporting>
 
   <profiles>
-    <profile>
-      <id>reporting</id>
-      <reporting>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-changes-plugin</artifactId>
-            <configuration>
-              <!-- For JIRA report -->
-              <columnNames>Type,Key,Summary,Assignee</columnNames>
-              <maxEntries>200</maxEntries>
-              <onlyCurrentVersion>true</onlyCurrentVersion>
-              <resolutionIds>Fixed</resolutionIds>
-              <sortColumnNames>Type,Key</sortColumnNames>
-            </configuration>
-            <reportSets>
-              <reportSet>
-                <reports>
-                  <report>jira-report</report>
-                </reports>
-              </reportSet>
-            </reportSets>
-          </plugin>
-        </plugins>
-      </reporting>
-    </profile>
     <profile>
       <id>run-its</id>
       <properties>
