--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@ under the License.
   </parent>
 
   <artifactId>maven-project-info-reports-plugin</artifactId>
-  <version>3.9.0-SNAPSHOT</version>
+  <version>3.9.0</version>
   <packaging>maven-plugin</packaging>
 
   <name>Apache Maven Project Info Reports Plugin</name>
@@ -95,7 +95,7 @@ under the License.
   <scm>
     <connection>scm:git:https://gitbox.apache.org/repos/asf/maven-project-info-reports-plugin.git</connection>
     <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/maven-project-info-reports-plugin.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>maven-project-info-reports-plugin-3.9.0</tag>
     <url>https://github.com/apache/maven-project-info-reports-plugin/tree/${project.scm.tag}</url>
   </scm>
   <issueManagement>
@@ -123,7 +123,7 @@ under the License.
     <sitePluginVersion>3.21.0</sitePluginVersion>
     <fluidoSkinVersion>2.0.1</fluidoSkinVersion>
     <checkstyle.violation.ignore>ParameterNumber,MethodLength</checkstyle.violation.ignore>
-    <project.build.outputTimestamp>2025-02-19T22:31:07Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-02-23T16:15:49Z</project.build.outputTimestamp>
   </properties>
 
   <dependencies>
