--- a/src/main/resources/project-info-reports.properties
+++ b/src/main/resources/project-info-reports.properties
@@ -16,17 +16,17 @@
 # under the License.
 
 report.ci-management.access                                        = Access
-report.ci-management.anthill.intro                                 = This project uses {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.ci-management.bamboo.intro                                  = This project uses {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.ci-management.buildforge.intro                              = This project uses {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.ci-management.continuum.intro                               = This project uses {Continuum, http://continuum.apache.org/}.
-report.ci-management.cruisecontrol.intro                           = This project uses {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.anthill.intro                                 = This project uses {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US}.
+report.ci-management.bamboo.intro                                  = This project uses {Bamboo, https://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = This project uses {Build Forge, https://www.ibm.com/products/rational-build-forge}.
+report.ci-management.continuum.intro                               = This project uses {Continuum, https://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = This project uses {CruiseControl, https://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = This document lists the continuous integration management system of this project for building and testing code on a frequent, regular basis.
 report.ci-management.general.intro                                 = This project uses Continuous Integration System.
 report.ci-management.github.intro                                  = This project uses {GitHub Actions, https://github.com/features/actions/}.
-report.ci-management.hudson.intro                                  = This project uses {Hudson, http://hudson-ci.org/}.
+report.ci-management.hudson.intro                                  = This project uses Hudson.
 report.ci-management.jenkins.intro                                 = This project uses {Jenkins, https://www.jenkins.io/}.
-report.ci-management.luntbuild.intro                               = This project uses {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.luntbuild.intro                               = This project uses {Luntbuild, https://sourceforge.net/p/luntbuild/}.
 report.ci-management.teamcity.intro                                = This project uses {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = This project uses {Travis CI, https://travis-ci.com/}.
 report.ci-management.name                                          = CI Management
@@ -134,17 +134,17 @@ report.dependency-info.title                                       = Maven Coord
 report.dependency-info.description                                 = This document describes how to include this project as a dependency using various dependency management tools.
 report.index.nodescription                                         = There is currently no description associated with this project.
 report.index.title                                                 = About
-report.issue-management.bugzilla.intro                             = This project uses {Bugzilla, http://www.bugzilla.org/}.
+report.issue-management.bugzilla.intro                             = This project uses {Bugzilla, https://www.bugzilla.org/}.
 report.issue-management.custom.intro                               = This project uses %issueManagementSystem% to manage its issues.
 report.issue-management.description                                = This document provides information on the issue management system used in this project.
 report.issue-management.general.intro                              = This project uses an issue management system to manage its issues.
-report.issue-management.github.intro                               = This project uses {GitHub, http://github.com/}.
+report.issue-management.github.intro                               = This project uses {GitHub, https://github.com/}.
 report.issue-management.intro                                      = Issues, bugs, and feature requests should be submitted to the following issue management system for this project.
-report.issue-management.jira.intro                                 = This project uses {JIRA, http://www.atlassian.com/software/jira}.
+report.issue-management.jira.intro                                 = This project uses {JIRA, https://www.atlassian.com/software/jira}.
 report.issue-management.name                                       = Issue Management
 report.issue-management.noissueManagement                          = No issue management system is defined. Please check back at a later date.
 report.issue-management.overview.title                             = Overview
-report.issue-management.scarab.intro                               = This project uses {Scarab, http://scarab.tigris.org/}.
+report.issue-management.scarab.intro                               = This project uses Scarab.
 report.issue-management.title                                      = Issue Management
 report.licenses.description                                        = This document lists the project license(s).
 report.licenses.multiple                                           = This project is provided under multiple licenses:
@@ -176,13 +176,13 @@ report.scm.accessthroughtproxy.svn.intro3                          = Example: Ed
 report.scm.accessthroughtproxy.title                               = Access Through a Proxy
 report.scm.anonymousaccess.general.intro                           = Refer to the documentation of the SCM used for more information about anonymously check out. The connection url is:
 report.scm.anonymousaccess.git.intro                               = The source can be checked out anonymously from Git with this command (See {https://git-scm.com/docs/git-clone,https://git-scm.com/docs/git-clone}):
-report.scm.anonymousaccess.hg.intro                                = The source can be checked out anonymously from Mercurial with this command (See {http://www.selenic.com/mercurial/hg.1.html#clone,http://www.selenic.com/mercurial/hg.1.html#clone}):
+report.scm.anonymousaccess.hg.intro                                = The source can be checked out anonymously from Mercurial with this command (See {https://www.selenic.com/mercurial/hg.1.html#clone,https://www.selenic.com/mercurial/hg.1.html#clone}):
 report.scm.anonymousaccess.svn.intro                               = The source can be checked out anonymously from Subversion with this command:
 report.scm.anonymousaccess.title                                   = Anonymous Access
 report.scm.description                                             = This document lists ways to access the online source repository.
 report.scm.devaccess.general.intro                                 = Refer to the documentation of the SCM used for more information about developer check out. The connection url is:
 report.scm.devaccess.git.intro                                     = Only project developers can access the Git tree via this method (See {https://git-scm.com/docs/git-clone,https://git-scm.com/docs/git-clone}).
-report.scm.devaccess.hg.intro                                      = Only project developers can access the Mercurial tree via this method (See {http://www.selenic.com/mercurial/hg.1.html#clone,http://www.selenic.com/mercurial/hg.1.html#clone}).
+report.scm.devaccess.hg.intro                                      = Only project developers can access the Mercurial tree via this method (See {https://www.selenic.com/mercurial/hg.1.html#clone,https://www.selenic.com/mercurial/hg.1.html#clone}).
 report.scm.devaccess.svn.intro1.https                              = Everyone can access the Subversion repository via HTTP, but committers must checkout the Subversion repository via HTTPS.
 report.scm.devaccess.svn.intro1.other                              = Committers must checkout the Subversion repository.
 report.scm.devaccess.svn.intro1.svn                                = Committers must checkout the Subversion repository via SVN.
@@ -194,8 +194,8 @@ report.scm.name                                                    = Source Code
 report.scm.noscm                                                   = No source configuration management system is defined. Please check back at a later date.
 report.scm.overview.title                                          = Overview
 report.scm.git.intro                                               = This project uses {Git, https://git-scm.com/} to manage its source code. Instructions on Git use can be found at {https://git-scm.com/doc,https://git-scm.com/doc}.
-report.scm.hg.intro                                                = This project uses {Mercurial, https://www.mercurial-scm.org/} to manage its source code. Instructions on Mercurial use can be found at {http://hgbook.red-bean.com/read/, http://hgbook.red-bean.com/read/}.
-report.scm.svn.intro                                               = This project uses {Subversion, http://subversion.apache.org/} to manage its source code. Instructions on Subversion use can be found at {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}.
+report.scm.hg.intro                                                = This project uses {Mercurial, https://www.mercurial-scm.org/} to manage its source code. Instructions on Mercurial use can be found at {https://hgbook.red-bean.com/read/, https://hgbook.red-bean.com/read/}.
+report.scm.svn.intro                                               = This project uses {Subversion, https://subversion.apache.org/} to manage its source code. Instructions on Subversion use can be found at {https://svnbook.red-bean.com/, https://svnbook.red-bean.com/}.
 report.scm.title                                                   = Source Code Management
 report.scm.webaccess.nourl                                         = There is no browsable version of the source code repository listed for this project. Please check back again later.
 report.scm.webaccess.title                                         = Web Browser Access
