--- a/src/it/java-version/property/pom.xml
+++ b/src/it/java-version/property/pom.xml
@@ -36,7 +36,7 @@ under the License.
     <maven.compiler.target>1.3</maven.compiler.target>
     <!--maven.compiler.target>${maven.compiler.source}</maven.compiler.target-->
     <!-- can't use ${maven.compiler.source} property since it is interpolated
-         in invoker to 1.5 instead of 1.3 because of http://svn.apache.org/r1646983
+         in invoker to 1.5 instead of 1.3 because of https://svn.apache.org/r1646983
          see MINVOKER-194 for detailed analysis
     -->
   </properties>
