--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,7 @@ under the License.
     <project.build.outputTimestamp>2025-02-23T16:16:11Z</project.build.outputTimestamp>
 
     <version.maven-invoker-plugin>3.9.1</version.maven-invoker-plugin>
+    <version.palantirJavaFormat>2.82.0</version.palantirJavaFormat>
   </properties>
 
   <dependencies>
