--- a/src/it/MPIR-375/pom.xml
+++ b/src/it/MPIR-375/pom.xml
@@ -27,7 +27,7 @@
   <artifactId>MPIR-375</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
-  <url>http://maven.apache.org/plugins/it/${project.artifactId}</url>
+  <url>https://maven.apache.org/plugins/it/${project.artifactId}</url>
 
   <properties>
     <maven.compiler.source>1.7</maven.compiler.source>
