--- a/src/it/MPIR-412/pom.xml
+++ b/src/it/MPIR-412/pom.xml
@@ -27,7 +27,7 @@
   <artifactId>MPIR-412</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <url>http://maven.apache.org/plugins/it/${project.artifactId}</url>
+  <url>https://maven.apache.org/plugins/it/${project.artifactId}</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
