--- a/src/it/MPIR-455/pom.xml
+++ b/src/it/MPIR-455/pom.xml
@@ -27,7 +27,7 @@
   <artifactId>MPIR-455</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <url>http://maven.apache.org/plugins/it/${project.artifactId}</url>
+  <url>https://maven.apache.org/plugins/it/${project.artifactId}</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -61,7 +61,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
-          <version>@sitePluginVersion@</version>
+          <version>@version.maven-site-plugin@</version>
         </plugin>
       </plugins>
     </pluginManagement>
