--- a/src/it/mpir-229/pom.xml
+++ b/src/it/mpir-229/pom.xml
@@ -48,8 +48,8 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-site-plugin</artifactId>
-        <version>@sitePluginVersion@</version>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>@version.maven-site-plugin@</version>
       </plugin>
     </plugins>
   </build>
