--- a/src/it/multi-module/pom.xml
+++ b/src/it/multi-module/pom.xml
@@ -78,8 +78,13 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>@version.maven-site-plugin@</version>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>@version.maven-site-plugin@</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>@version.maven-compiler-plugin@</version>
       </plugin>
     </plugins>
   </build>
