Update parent to 47 (#616)

--- a/src/it/MPIR-242/pom.xml
+++ b/src/it/MPIR-242/pom.xml
@@ -31,7 +31,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <artifacts.url>http://maven.apache.org/plugins/it/${project.artifactId}</artifacts.url>
+    <artifacts.url>https://maven.apache.org/plugins/it/${project.artifactId}</artifacts.url>
     <fluidoSkinVersion>@fluidoSkinVersion@</fluidoSkinVersion>
   </properties>
 
@@ -49,7 +49,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-        <version>@sitePluginVersion@</version>
+        <version>@version.maven-site-plugin@</version>
       </plugin>
     </plugins>
   </build>
