--- a/src/it/MPIR-349/parent/pom.xml
+++ b/src/it/MPIR-349/parent/pom.xml
@@ -43,7 +43,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-        <version>@sitePluginVersion@</version>
+        <version>@version.maven-site-plugin@</version>
       </plugin>
     </plugins>
   </build>
