--- a/src/it/team-local-avatars/pom.xml
+++ b/src/it/team-local-avatars/pom.xml
@@ -54,7 +54,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-        <version>@sitePluginVersion@</version>
+        <version>@version.maven-site-plugin@</version>
       </plugin>
     </plugins>
   </build>
