--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@ under the License.
   </contributors>
 
   <prerequisites>
-    <maven>${mavenVersion}</maven>
+    <maven>3.6.3</maven>
   </prerequisites>
 
   <scm>
@@ -115,8 +115,8 @@ under the License.
 
   <properties>
     <javaVersion>8</javaVersion>
-    <mavenVersion>3.6.3</mavenVersion>
-    <resolverVersion>1.4.1</resolverVersion>
+    <mavenVersion>3.9.12</mavenVersion>
+    <resolverVersion>1.9.25</resolverVersion>
     <doxiaVersion>2.0.0</doxiaVersion>
     <doxiaSitetoolsVersion>2.0.0</doxiaSitetoolsVersion>
     <scmVersion>2.2.1</scmVersion>
